--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/netinfo": "7.1.3",
     "@react-navigation/bottom-tabs": "6.0.0",
     "@react-navigation/native": "6.0.0",
     "@react-navigation/native-stack": "6.0.0",
@@ -21,6 +22,7 @@
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
     "lottie-react-native": "5.0.1",
+    "moment": "^2.29.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
