--- a/app.json
+++ b/app.json
@@ -7,8 +7,8 @@
 		"icon": "./app/assets/icon.png",
 		"splash": {
 			"image": "./app/assets/splash.png",
-			"resizeMode": "contain",
-			"backgroundColor": "#ffffff"
+			"resizeMode": "cover",
+			"backgroundColor": "#e63c4b"
 		},
 		"updates": {
 			"fallbackToCacheTimeout": 0
@@ -19,12 +19,9 @@
 		},
 		"android": {
 			"adaptiveIcon": {
-				"foregroundImage": "./app/assets/adaptive-icon.png",
-				"backgroundColor": "#FFFFFF"
+				"foregroundImage": "./app/assets/splash.png",
+				"backgroundColor": "#e63c4b"
 			}
-		},
-		"web": {
-			"favicon": "./app/assets/favicon.png"
 		}
 	}
 }
