--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/native-stack": "6.0.0",
     "apisauce": "^2.1.5",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
     "expo-image-picker": "~12.0.1",
     "expo-location": "~14.0.1",
+    "expo-secure-store": "~11.1.0",
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
     "lottie-react-native": "5.0.1",
