--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
-  "name": "donewithit",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/netinfo": "7.1.3",
-    "@react-navigation/bottom-tabs": "6.0.0",
-    "@react-navigation/native": "6.0.0",
-    "@react-navigation/native-stack": "6.0.0",
-    "apisauce": "^2.1.5",
-    "expo": "~44.0.0",
-    "expo-app-loading": "~1.3.0",
-    "expo-image-picker": "~12.0.1",
-    "expo-location": "~14.0.1",
-    "expo-secure-store": "~11.1.0",
-    "expo-status-bar": "~1.2.0",
-    "formik": "^2.2.9",
-    "lottie-react-native": "5.0.1",
-    "moment": "^2.29.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-progress": "^5.0.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "private": true
+	"name": "done-with-it",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"client": "expo start",
+		"server": "yarn start --prefix backend",
+		"dev": "concurrently \"yarn run server\" \"yarn run client\"",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject"
+	},
+	"dependencies": {
+		"@react-native-async-storage/async-storage": "~1.15.0",
+		"@react-native-community/netinfo": "7.1.3",
+		"@react-navigation/bottom-tabs": "6.0.0",
+		"@react-navigation/native": "6.0.0",
+		"@react-navigation/native-stack": "6.0.0",
+		"apisauce": "^2.1.5",
+		"expo": "~44.0.0",
+		"expo-app-loading": "~1.3.0",
+		"expo-image-picker": "~12.0.1",
+		"expo-location": "~14.0.1",
+		"expo-secure-store": "~11.1.0",
+		"expo-status-bar": "~1.2.0",
+		"formik": "^2.2.9",
+		"lottie-react-native": "5.0.1",
+		"moment": "^2.29.2",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"react-native": "0.64.3",
+		"react-native-gesture-handler": "~2.1.0",
+		"react-native-progress": "^5.0.0",
+		"react-native-safe-area-context": "3.3.2",
+		"react-native-screens": "~3.10.1",
+		"react-native-svg": "12.1.1",
+		"react-native-web": "0.17.1",
+		"yup": "^0.32.11"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"concurrently": "^7.1.0"
+	},
+	"private": true
 }
