--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"expo-app-loading": "~1.3.0",
 		"expo-image-picker": "~12.0.1",
 		"expo-location": "~14.0.1",
+		"expo-notifications": "^0.14.1",
 		"expo-secure-store": "~11.1.0",
 		"expo-status-bar": "~1.2.0",
 		"formik": "^2.2.9",
