[feat]: add google map

--- a/app.json
+++ b/app.json
@@ -16,6 +16,13 @@
 		"assetBundlePatterns": ["**/*"],
 		"ios": {
 			"supportsTablet": true
+		},
+		"android": {
+			"config": {
+				"googleMaps": {
+					"apiKey": "AIzaSyBTyC3L7eAfgmrhq53t_1Urvg-98B3orkI"
+				}
+			}
 		}
 	}
 }
