refactor: update configd

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"expo": {
 		"name": "DoneWithIt",
-		"slug": "DoneWithIt",
+		"slug": "Done_with_it",
 		"version": "1.0.0",
 		"orientation": "portrait",
 		"icon": "./app/assets/icon.png",
