--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"expo-notifications": "^0.14.1",
 		"expo-secure-store": "~11.1.0",
 		"expo-status-bar": "~1.2.0",
+		"expo-updates": "~0.11.7",
 		"formik": "^2.2.9",
 		"jwt-decode": "^3.1.2",
 		"lottie-react-native": "5.0.1",
